фин верстка, ховеры, скрипты

--- a/src/html/blocks/steps.html
+++ b/src/html/blocks/steps.html
@@ -1,4 +1,4 @@
-<section class="steps">
+<section class="steps" id="steps">
     <div class="steps__container container">
         <h2 class="steps__title title">Этапы нашей работы</h2>
         <ul class="steps__list">
