--- a/src/html/blocks/callback.html
+++ b/src/html/blocks/callback.html
@@ -15,7 +15,7 @@
             </div>
             <button class="callback__button" type="submit">Отправить</button>
         </form>
-        <div class="callback__img-wrapper -ibg">
+        <div class="callback__img-wrapper -ibg" id="address">
             <img src="https://placehold.co/443x200/EEE/31343C" alt="" class="callback__map">
         </div>
     </div>
