--- a/src/html/blocks/catalog.html
+++ b/src/html/blocks/catalog.html
@@ -1,4 +1,4 @@
-<section class="catalog">
+<section class="catalog" id="catalog">
     <div class="catalog__container container">
         <h2 class="catalog__title title">Ремонт любой техники</h2>
         <ul class="catalog__list">
