--- a/src/html/blocks/reviews.html
+++ b/src/html/blocks/reviews.html
@@ -1,4 +1,4 @@
-<section class="reviews">
+<section class="reviews" id="reviews">
     <div class="container reviews__container">
         <h2 class="reviews__title title title--colored">Отзывы клиентов</h2>
         <ul class="reviews__list">
