--- a/src/index.html
+++ b/src/index.html
@@ -1,26 +1,20 @@
 <!DOCTYPE html>
 <html lang="ru">
 @@include('html/head.html', {
-'title': 'Главная'
+'title': 'Карта сайта'
 })
 
 <body>
-    @@include('html/header.html', {})
-
-
-
-    <main class="main main-index">
-        @@include('html/blocks/hero.html', {})
-        @@include('html/blocks/catalog.html', {})
-        @@include('html/blocks/form.html', {})
-        @@include('html/blocks/steps.html', {})
-        @@include('html/blocks/reviews.html', {})
-        @@include('html/blocks/whywe.html', {})
-        @@include('html/blocks/callback.html', {})
+    <main class="container">
+        <h1 class="title">Список страниц</h1>
+        <ul>
+            <li><a href="/front.html">Главная</a></li>
+            <li><a href="/front-apple.html">Apple</a></li>
+            <li><a href="/front-samsung.html">Samsung</a></li>
+            <li><a href="/front-xiaomi.html">Xiaomi</a></li>
+            <li><a href="/catalog.html">Каталог</a></li>
+        </ul>
     </main>
-
-    @@include('html/footer.html', {})
-    @@include('html/script.html', {})
 </body>
 
 </html>
