--- a/src/html/blocks/callback.html
+++ b/src/html/blocks/callback.html
@@ -15,8 +15,9 @@
             </div>
             <button class="callback__button" type="submit">Отправить</button>
         </form>
-        <div class="callback__img-wrapper -ibg" id="address">
-            <img src="https://placehold.co/443x200/EEE/31343C" alt="" class="callback__map">
+        <div class="callback__map">
+            <div itemprop="hasMap" id="map" class="callback__map js-map" style="width: 100%; height: 100%;"
+                data-addr="Санкт-Петербург, улица Ломоносова, д.2" data-x="59.932558" data-y="30.326917"></div>
         </div>
     </div>
 </section>
