--- a/src/html/blocks/hero.html
+++ b/src/html/blocks/hero.html
@@ -14,8 +14,13 @@
                 </ul>
             </div>
             <div class="hero__btns">
-                <a href="#" class="hero__btn hero__btn--primary">Заказать ремонт</a>
-                <a href="#" class="hero__btn">Узнать стоимость</a>
+                <button type="button" data-type="modal" data-heading="Оставить заявку на ремонт"
+                    data-text="Оставьте свои контакты, и наши специалисты свяжутся с вами"
+                    data-placeholder="Когда вам будет удобно встретить курьера сервисного центра?"
+                    class="hero__btn hero__btn--primary">Заказать ремонт</button>
+                <button type="button" data-type="modal" data-heading="Хотите узнать стоимость ремонта?"
+                    data-text="Оставьте свои контакты, и наши специалисты свяжутся с вами"
+                    data-placeholder="Какая у вас поломка?" class="hero__btn">Узнать стоимость</button>
             </div>
         </div>
     </div>
