--- a/src/html/blocks/steps.html
+++ b/src/html/blocks/steps.html
@@ -4,19 +4,23 @@
         <ul class="steps__list">
             <li class="steps__item">
                 <h3 class="steps__item-title">Заявка</h3>
-                <div class="steps__item-text">Оставляете заявку любым удобным способом. Неисправная техника доставлятся в сервис.</div>
+                <div class="steps__item-text">Оставляете заявку любым удобным способом. Неисправная техника доставлятся
+                    в сервис.</div>
             </li>
             <li class="steps__item">
                 <h3 class="steps__item-title">Диагностика</h3>
-                <div class="steps__item-text">Проводится точная и полная диагностика, находится причина поломки устройства</div>
+                <div class="steps__item-text">Проводится точная и полная диагностика, находится причина поломки
+                    устройства</div>
             </li>
             <li class="steps__item">
                 <h3 class="steps__item-title">Расчёт стоимости</h3>
-                <div class="steps__item-text">Согласовываем цену и сроки ремонта техники, после чего приступаем к работе.</div>
+                <div class="steps__item-text">Согласовываем цену и сроки ремонта техники, после чего приступаем
+                    к работе.</div>
             </li>
             <li class="steps__item">
                 <h3 class="steps__item-title">Возврат техники</h3>
-                <div class="steps__item-text">Передаём исправное устройство в удобное для вас время, выписываем гарантию.</div>
+                <div class="steps__item-text">Передаём исправное устройство в удобное для вас время, выписываем
+                    гарантию.</div>
             </li>
         </ul>
 
@@ -24,7 +28,9 @@
             <div class="steps__img-wrapper -ibg">
                 <img src="https://placehold.co/584x340/EEE/31343C" alt="">
             </div>
-            <button class="steps__btn" type="button">Записаться на консультацию</button>
+            <button class="steps__btn" data-type="modal" data-heading="Оставить заявку на консультацию"
+                data-text="Оставьте свои контакты, и наши специалисты свяжутся с вами"
+                data-placeholder="Какой у вас вопрос?" type="button">Записаться на консультацию</button>
         </div>
     </div>
 </section>
