--- a/src/front.html
+++ b/src/front.html
@@ -20,6 +20,7 @@
         @@include('html/blocks/reviews.html', {})
         @@include('html/blocks/whywe.html', {})
         @@include('html/blocks/callback.html', {})
+        @@include('html/blocks/modal.html', {})
     </main>
 
     @@include('html/footer.html', {})
