--- a/src/html/script.html
+++ b/src/html/script.html
@@ -5,6 +5,8 @@
 <script defer src="static/plugins/jquery.hideseek.min.js"></script>
 <script defer src="static/plugins/inputmask.min.js"></script>
 <script defer src="static/plugins/slick.min.js"></script>
+<script defer src="https://api-maps.yandex.ru/2.1/?apikey=ab5ec42c-5529-4814-ae3f-524d11df963b&lang=ru_RU" type="text/javascript"></script>
+
 <!--
 <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 <script defer type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.13.2/js/jquery.dataTables.js"></script>
