картинки+тексты-иконки

--- a/public/front-apple.html
+++ b/public/front-apple.html
@@ -180,7 +180,7 @@
         <section class="hero">
     <div class="container hero__container">
         <div class="-ibg hero__banner-wrapper">
-            <img src="https://placehold.co/480x480/EEE/31343C" alt="" class="hero__banner">
+            <img src="./images/hero-apple.png" alt="" class="hero__banner">
         </div>
 
         <div class="hero__wrapper">
@@ -298,30 +298,26 @@
         <h2 class="title steps__title">Этапы нашей работы</h2>
         <ul class="steps__list">
             <li class="steps__item">
-                <h3 class="steps__item-title">Заявка</h3>
-                <div class="steps__item-text">Оставляете заявку любым удобным способом. Неисправная техника доставлятся
-                    в сервис.</div>
+                <h3 class="steps__item-title">Приём заявки</h3>
+                <div class="steps__item-text">Первичная консультация клиента и приём заявки на ремонт неисправного устройства</div>
             </li>
             <li class="steps__item">
                 <h3 class="steps__item-title">Диагностика</h3>
-                <div class="steps__item-text">Проводится точная и полная диагностика, находится причина поломки
-                    устройства</div>
+                <div class="steps__item-text">Выявление причины поломки с помощью диагностики, определение стратегии ремонта</div>
             </li>
             <li class="steps__item">
-                <h3 class="steps__item-title">Расчёт стоимости</h3>
-                <div class="steps__item-text">Согласовываем цену и сроки ремонта техники, после чего приступаем
-                    к работе.</div>
+                <h3 class="steps__item-title">Ремонт техники</h3>
+                <div class="steps__item-text">Согласование окончательной стоимости обслуживания, проведение ремонтных работ</div>
             </li>
             <li class="steps__item">
-                <h3 class="steps__item-title">Возврат техники</h3>
-                <div class="steps__item-text">Передаём исправное устройство в удобное для вас время, выписываем
-                    гарантию.</div>
+                <h3 class="steps__item-title">Гарантия</h3>
+                <div class="steps__item-text">Возврат восстановленной техники владельцу, выписка гарантийной квитанции</div>
             </li>
         </ul>
 
         <div class="steps__wrapper">
             <div class="-ibg steps__img-wrapper">
-                <img src="https://placehold.co/584x340/EEE/31343C" alt="">
+                <img src="./images/steps-photo.jpg" alt="">
             </div>
             <button class="steps__btn" data-type="modal" data-heading="Оставить заявку на консультацию" data-text="Оставьте свои контакты, и наши специалисты свяжутся с вами" data-placeholder="Какой у вас вопрос?" type="button">Записаться на консультацию</button>
         </div>
@@ -364,23 +360,22 @@
 </section>
         <div class="whywe">
     <div class="container whywe__container">
-        <h2 class="title whywe__title">Почему нас выбирают?</h2>
+        <h2 class="title whywe__title">Наши преимущества</h2>
 
         <ul class="whywe__list">
             <li class="whywe__item">
                 <img src="https://placehold.co/48x48/EEE/31343C" alt="" class="whywe__item-icon">
-                <h3 class="whywe__item-title">Высокое качество</h3>
-                <p class="whywe__item-text">Мы уверены в квалификации своих мастеров, поэтому даем гарантию 1 год на все услуги</p>
+                <h3 class="whywe__item-title">Опытные мастера</h3>
+                <p class="whywe__item-text">В нашем сервисе работают только квалифицированные мастера с большим опытом работы</p></li>
+            <li class="whywe__item">
+                <img src="https://placehold.co/48x48/EEE/31343C" alt="" class="whywe__item-icon">
+                <h3 class="whywe__item-title">Высокая качество</h3>
+                <p class="whywe__item-text">Передовое оборудование и опыт наших мастеров гарантируют высокое качество услуг</p>
             </li>
             <li class="whywe__item">
                 <img src="https://placehold.co/48x48/EEE/31343C" alt="" class="whywe__item-icon">
-                <h3 class="whywe__item-title">Скидки постоянным клиентам</h3>
-                <p class="whywe__item-text">Мы любим своих клиентов, поэтому предлагаем самые выгодные условия и подарки</p>
-            </li>
-            <li class="whywe__item">
-                <img src="https://placehold.co/48x48/EEE/31343C" alt="" class="whywe__item-icon">
-                <h3 class="whywe__item-title">Опыт 12 лет</h3>
-                <p class="whywe__item-text">Мы добросовестно работаем с 2008 года. Мы помогли нескольким тысячам клиентов</p>
+                <h3 class="whywe__item-title">Скорость обслуживания</h3>
+                <p class="whywe__item-text">Наличие собственного склада запчастей позволяет быстро устранять любые поломки</p>
             </li>
         </ul>
     </div>
