--- a/src/html/blocks/hero.html
+++ b/src/html/blocks/hero.html
@@ -1,7 +1,7 @@
 <section class="hero">
     <div class="container hero__container">
         <div class="-ibg hero__banner-wrapper">
-            <img src="https://placehold.co/480x480/EEE/31343C" alt="" class="hero__banner">
+            <img src="./images/@@image" alt="" class="hero__banner">
         </div>
 
         <div class="hero__wrapper">
