--- a/src/html/blocks/steps.html
+++ b/src/html/blocks/steps.html
@@ -3,30 +3,26 @@
         <h2 class="steps__title title">Этапы нашей работы</h2>
         <ul class="steps__list">
             <li class="steps__item">
-                <h3 class="steps__item-title">Заявка</h3>
-                <div class="steps__item-text">Оставляете заявку любым удобным способом. Неисправная техника доставлятся
-                    в сервис.</div>
+                <h3 class="steps__item-title">Приём заявки</h3>
+                <div class="steps__item-text">Первичная консультация клиента и приём заявки на ремонт неисправного устройства</div>
             </li>
             <li class="steps__item">
                 <h3 class="steps__item-title">Диагностика</h3>
-                <div class="steps__item-text">Проводится точная и полная диагностика, находится причина поломки
-                    устройства</div>
+                <div class="steps__item-text">Выявление причины поломки с помощью диагностики, определение стратегии ремонта</div>
             </li>
             <li class="steps__item">
-                <h3 class="steps__item-title">Расчёт стоимости</h3>
-                <div class="steps__item-text">Согласовываем цену и сроки ремонта техники, после чего приступаем
-                    к работе.</div>
+                <h3 class="steps__item-title">Ремонт техники</h3>
+                <div class="steps__item-text">Согласование окончательной стоимости обслуживания, проведение ремонтных работ</div>
             </li>
             <li class="steps__item">
-                <h3 class="steps__item-title">Возврат техники</h3>
-                <div class="steps__item-text">Передаём исправное устройство в удобное для вас время, выписываем
-                    гарантию.</div>
+                <h3 class="steps__item-title">Гарантия</h3>
+                <div class="steps__item-text">Возврат восстановленной техники владельцу, выписка гарантийной квитанции</div>
             </li>
         </ul>
 
         <div class="steps__wrapper">
             <div class="steps__img-wrapper -ibg">
-                <img src="https://placehold.co/584x340/EEE/31343C" alt="">
+                <img src="./images/steps-photo.jpg" alt="">
             </div>
             <button class="steps__btn" data-type="modal" data-heading="Оставить заявку на консультацию"
                 data-text="Оставьте свои контакты, и наши специалисты свяжутся с вами"
