--- a/src/html/blocks/whywe.html
+++ b/src/html/blocks/whywe.html
@@ -1,22 +1,21 @@
 <div class="whywe">
     <div class="whywe__container container">
-        <h2 class="whywe__title title">Почему нас выбирают?</h2>
+        <h2 class="whywe__title title">Наши преимущества</h2>
 
         <ul class="whywe__list">
             <li class="whywe__item">
                 <img src="https://placehold.co/48x48/EEE/31343C" alt="" class="whywe__item-icon">
-                <h3 class="whywe__item-title">Высокое качество</h3>
-                <p class="whywe__item-text">Мы уверены в квалификации своих мастеров, поэтому даем гарантию 1 год на все услуги</p>
+                <h3 class="whywe__item-title">Опытные мастера</h3>
+                <p class="whywe__item-text">В нашем сервисе работают только квалифицированные мастера с большим опытом работы</p></li>
+            <li class="whywe__item">
+                <img src="https://placehold.co/48x48/EEE/31343C" alt="" class="whywe__item-icon">
+                <h3 class="whywe__item-title">Высокая качество</h3>
+                <p class="whywe__item-text">Передовое оборудование и опыт наших мастеров гарантируют высокое качество услуг</p>
             </li>
             <li class="whywe__item">
                 <img src="https://placehold.co/48x48/EEE/31343C" alt="" class="whywe__item-icon">
-                <h3 class="whywe__item-title">Скидки постоянным клиентам</h3>
-                <p class="whywe__item-text">Мы любим своих клиентов, поэтому предлагаем самые выгодные условия и подарки</p>
-            </li>
-            <li class="whywe__item">
-                <img src="https://placehold.co/48x48/EEE/31343C" alt="" class="whywe__item-icon">
-                <h3 class="whywe__item-title">Опыт 12 лет</h3>
-                <p class="whywe__item-text">Мы добросовестно работаем с 2008 года. Мы помогли нескольким тысячам клиентов</p>
+                <h3 class="whywe__item-title">Скорость обслуживания</h3>
+                <p class="whywe__item-text">Наличие собственного склада запчастей позволяет быстро устранять любые поломки</p>
             </li>
         </ul>
     </div>
