--- a/src/front-xiaomi.html
+++ b/src/front-xiaomi.html
@@ -13,7 +13,9 @@
 
 
     <main class="main main-index">
-        @@include('html/blocks/hero.html', {})
+        @@include('html/blocks/hero.html', {
+            'image': 'hero-xiaomi.png'
+        })
         @@include('html/blocks/catalog.html', {})
         @@include('html/blocks/form.html', {})
         @@include('html/blocks/steps.html', {})
