замена баннеров hero+иконки

--- a/src/html/blocks/whywe.html
+++ b/src/html/blocks/whywe.html
@@ -4,16 +4,32 @@
 
         <ul class="whywe__list">
             <li class="whywe__item">
-                <img src="https://placehold.co/48x48/EEE/31343C" alt="" class="whywe__item-icon">
+                <svg class="whywe__item-icon" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M1.5 46.5C1.5 46.5 2.5305 41.0685 3 39C3.312 37.6245 4.5 34.5 16.5 33C16.5 33 18 37.5 24 37.5C30 37.5 31.5 33 31.5 33C43.5 34.5 44.688 37.5315 45 39C45.441 41.076 46.5 46.5 46.5 46.5M15 16.5C15 22.299 19.5 27 24 27C28.5 27 33 22.299 33 16.5M9 12H34.5C34.5 6.201 29.799 1.5 24 1.5C18.201 1.5 13.5 6.201 13.5 12" stroke="#0E239F" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
                 <h3 class="whywe__item-title">Опытные мастера</h3>
                 <p class="whywe__item-text">В нашем сервисе работают только квалифицированные мастера с большим опытом работы</p></li>
             <li class="whywe__item">
-                <img src="https://placehold.co/48x48/EEE/31343C" alt="" class="whywe__item-icon">
+                <svg class="whywe__item-icon" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M31.1138 12.9822L27.216 12.4157L25.4729 8.88372C24.8717 7.66544 23.1288 7.66469 22.5272 8.88372L20.7841 12.4157L16.8863 12.9822C15.5419 13.1776 15.0025 14.8348 15.976 15.7836L18.7966 18.5328L18.1308 22.4149C17.9012 23.7538 19.3106 24.7789 20.5139 24.1464L24.0003 22.3135L27.4866 24.1464C28.685 24.7767 30.1003 23.7603 29.8696 22.4149L29.2038 18.5328L32.0243 15.7836C32.9969 14.8354 32.459 13.1776 31.1138 12.9822ZM26.0692 19.6903C23.8578 18.5277 24.2093 18.4925 21.9308 19.6903C22.3529 17.2297 22.4963 17.5522 20.6519 15.7543C23.1964 15.3845 22.8943 15.5622 24 13.3218C25.1077 15.5662 24.8042 15.3846 27.3481 15.7543C25.5558 17.5014 25.6347 17.1566 26.0692 19.6903Z" fill="#0E239F"/>
+                    <path d="M47.7766 37.9462L37.8541 20.7593C40.9883 11.3436 33.9616 1.55322 23.9999 1.55322C14.0361 1.55322 7.01275 11.3467 10.1458 20.7591L0.223295 37.9462C-0.474297 39.1545 0.563794 40.6319 1.93789 40.3837L8.35197 39.2241L10.554 45.3591C11.0247 46.6703 12.8212 46.8398 13.5222 45.6256L22.1772 30.6346C23.3916 30.7851 24.6073 30.7851 25.8225 30.6346L34.4775 45.6256C35.1784 46.8396 36.975 46.6708 37.4457 45.3591L39.6477 39.2241L46.0618 40.3837C47.4351 40.6317 48.4747 39.1554 47.7766 37.9462ZM12.449 40.9147L10.9741 36.8056C10.7032 36.0508 9.92659 35.6014 9.136 35.7442L4.83916 36.5212L11.8884 24.3109C13.5655 26.8104 16.0093 28.7495 18.8553 29.8187L12.449 40.9147ZM13.4772 20.3143C10.5418 12.9 15.9983 4.83803 23.9999 4.83803C32.0078 4.83803 37.4565 12.9041 34.5228 20.3142C30.7223 29.9106 17.2146 29.752 13.4772 20.3143ZM38.8639 35.7442C38.0743 35.6016 37.2968 36.0502 37.0257 36.8055L35.5508 40.9146L29.1445 29.8184C31.924 28.7676 34.3042 26.9545 36.1114 24.3106L43.1606 36.5209L38.8639 35.7442Z" fill="#0E239F"/>
+                    </svg>
                 <h3 class="whywe__item-title">Высокая качество</h3>
                 <p class="whywe__item-text">Передовое оборудование и опыт наших мастеров гарантируют высокое качество услуг</p>
             </li>
             <li class="whywe__item">
-                <img src="https://placehold.co/48x48/EEE/31343C" alt="" class="whywe__item-icon">
+                <svg class="whywe__item-icon" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g clip-path="url(#clip0_282_466)">
+                    <path d="M24 0C10.7446 0 0 10.7446 0 24C0 37.2554 10.7446 48 24 48C37.2554 48 48 37.2554 48 24C48 10.7446 37.2554 0 24 0ZM24 44.25C12.8159 44.25 3.75 35.1841 3.75 24C3.75 12.8159 12.8159 3.75 24 3.75C35.1841 3.75 44.25 12.8159 44.25 24C44.25 35.1841 35.1841 44.25 24 44.25Z" fill="#0E239F"/>
+                    <path d="M32.8388 15.9008L30.6269 17.9282C32.1578 19.5982 33 21.7544 33 24C33 28.9629 28.9629 33 24 33C19.0371 33 15 28.9629 15 24C15 19.0371 19.0371 15 24 15V12C17.3833 12 12 17.3833 12 24C12 30.6167 17.3833 36 24 36C30.6167 36 36 30.6167 36 24C36 21.0015 34.8779 18.126 32.8388 15.9008Z" fill="#0E239F"/>
+                    <path d="M25.5 24.5991L28.7989 13.002L22.5 23.4008L23.25 25.5L25.5 24.5991Z" fill="#0E239F"/>
+                    </g>
+                    <defs>
+                    <clipPath id="clip0_282_466">
+                    <rect width="48" height="48" fill="white"/>
+                    </clipPath>
+                    </defs>
+                    </svg>                    
                 <h3 class="whywe__item-title">Скорость обслуживания</h3>
                 <p class="whywe__item-text">Наличие собственного склада запчастей позволяет быстро устранять любые поломки</p>
             </li>
