--- a/src/front-apple.html
+++ b/src/front-apple.html
@@ -5,7 +5,7 @@
 })
 
 <!-- в зависимости от бренда менять переменные на body. -->
-<body style="--brand-button: #1F79C6; --brand-bg: #0E314F;">
+<body style="--color-main-brand: #1F79C6; --brand-bg: #0E314F;">
     @@include('html/header.html', {
         'logo': 'logo-apple.svg'
     })
