--- a/src/front-xiaomi.html
+++ b/src/front-xiaomi.html
@@ -5,7 +5,7 @@
 })
 
 <!-- в зависимости от бренда менять переменные на body. -->
-<body style="--brand-button: #F2621B; --brand-bg: #000314;">
+<body style="--color-main-brand: #F2621B; --brand-bg: #000314;">
     @@include('html/header.html', {
         'logo': 'logo-xiaomi.svg'
     })
