--- a/src/front.html
+++ b/src/front.html
@@ -5,7 +5,7 @@
 })
 
 <!-- в зависимости от бренда менять переменные на body. -->
-<body style="--brand-button: #014A97; --brand-bg: #000B4C;">
+<body style="--color-main-brand: #014A97; --brand-bg: #000B4C;">
     @@include('html/header.html', {
         'logo': 'logo-default.svg'
     })
