--- a/src/html/blocks/catalog.html
+++ b/src/html/blocks/catalog.html
@@ -1,8 +1,8 @@
 <section class="catalog" id="catalog">
-    <div class="catalog__container container">
+    <div class="catalog__container container" data-show-more-root>
         <h2 class="catalog__title title">Ремонт любой техники</h2>
         <ul class="catalog__list">
-            <li class="catalog__item">
+            <li class="catalog__item" data-show-more-item>
                 <a href="#" class="catalog__item-link">
                     <div class="-ibg catalog__item-img-wrapper">
                         <img src="https://placehold.co/252x160/EEE/31343C" alt="">
@@ -10,7 +10,7 @@
                     <p class="catalog__item-name">Телевизоры</p>
                 </a>
             </li>
-            <li class="catalog__item">
+            <li class="catalog__item" data-show-more-item>
                 <a href="#" class="catalog__item-link">
                     <div class="-ibg catalog__item-img-wrapper">
                         <img src="https://placehold.co/252x160/EEE/31343C" alt="">
@@ -18,7 +18,7 @@
                     <p class="catalog__item-name">Смартфоны</p>
                 </a>
             </li>
-            <li class="catalog__item">
+            <li class="catalog__item" data-show-more-item>
                 <a href="#" class="catalog__item-link">
                     <div class="-ibg catalog__item-img-wrapper">
                         <img src="https://placehold.co/252x160/EEE/31343C" alt="">
@@ -26,7 +26,7 @@
                     <p class="catalog__item-name">Планшеты</p>
                 </a>
             </li>
-            <li class="catalog__item">
+            <li class="catalog__item" data-show-more-item>
                 <a href="#" class="catalog__item-link">
                     <div class="-ibg catalog__item-img-wrapper">
                         <img src="https://placehold.co/252x160/EEE/31343C" alt="">
@@ -34,7 +34,7 @@
                     <p class="catalog__item-name">Пылесосы</p>
                 </a>
             </li>
-            <li class="catalog__item">
+            <li class="catalog__item" data-show-more-item>
                 <a href="#" class="catalog__item-link">
                     <div class="-ibg catalog__item-img-wrapper">
                         <img src="https://placehold.co/252x160/EEE/31343C" alt="">
@@ -42,7 +42,7 @@
                     <p class="catalog__item-name">Стиральные машины</p>
                 </a>
             </li>
-            <li class="catalog__item">
+            <li class="catalog__item" data-show-more-item>
                 <a href="#" class="catalog__item-link">
                     <div class="-ibg catalog__item-img-wrapper">
                         <img src="https://placehold.co/252x160/EEE/31343C" alt="">
@@ -50,7 +50,7 @@
                     <p class="catalog__item-name">Микроволновые печи</p>
                 </a>
             </li>
-            <li class="catalog__item">
+            <li class="catalog__item" data-show-more-item>
                 <a href="#" class="catalog__item-link">
                     <div class="-ibg catalog__item-img-wrapper">
                         <img src="https://placehold.co/252x160/EEE/31343C" alt="">
@@ -58,7 +58,23 @@
                     <p class="catalog__item-name">Смарт-часы</p>
                 </a>
             </li>
-            <li class="catalog__item">
+            <li class="catalog__item" data-show-more-item>
+                <a href="#" class="catalog__item-link">
+                    <div class="-ibg catalog__item-img-wrapper">
+                        <img src="https://placehold.co/252x160/EEE/31343C" alt="">
+                    </div>
+                    <p class="catalog__item-name">Холодильники</p>
+                </a>
+            </li>
+            <li class="catalog__item hidden" data-show-more-item>
+                <a href="#" class="catalog__item-link">
+                    <div class="-ibg catalog__item-img-wrapper">
+                        <img src="https://placehold.co/252x160/EEE/31343C" alt="">
+                    </div>
+                    <p class="catalog__item-name">Холодильники</p>
+                </a>
+            </li>
+            <li class="catalog__item hidden" data-show-more-item>
                 <a href="#" class="catalog__item-link">
                     <div class="-ibg catalog__item-img-wrapper">
                         <img src="https://placehold.co/252x160/EEE/31343C" alt="">
@@ -67,6 +83,6 @@
                 </a>
             </li>
         </ul>
-        <button class="catalog__button" type="button">Посмотреть еще</button>
+        <button class="catalog__button" data-show-more type="button">Посмотреть еще</button>
     </div>
 </section>
